--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:13
@@ -14,6 +16,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - my-network
 
   web:
     build: .
@@ -32,6 +36,8 @@ services:
       - DB_PASSWORD=journalpass
       - DB_HOST=db
       - DB_PORT=5432
+    networks:
+      - my-network
 
   pgadmin:
     image: dpage/pgadmin4
@@ -42,8 +48,10 @@ services:
       - "5050:80"  # Expose pgAdmin on localhost:5050
     depends_on:
       - db
+    networks:
+      - my-network
 
-  pytest: 
+  pytest:
     image: python:3.9 # Use Python base image
     volumes:
       - .:/app
@@ -55,9 +63,9 @@ services:
     networks:
       - my-network
 
-  volumes:
-    postgres_data:
+volumes:
+  postgres_data:
 
-  networks:
-    my-network:
-     driver: bridge
+networks:
+  my-network:
+    driver: bridge
